# cookie-stand-api

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
cookie_stands/: asgi.py  settings.py  urls.py  wsgi.py
